# test_project_circleci

./: CMakeLists.txt  README.md
.circleci/: config.yml
lib/: CMakeLists.txt  MyClass.cpp  MyClass.h
tests/: MyClassTest.cpp
